# KNN

./: CMakeLists.txt  main.cpp
knn/algorithm/: knn.cpp  knn.h
knn/collections/: collections_utils.cpp  collections_utils.h  element.cpp  element.h
knn/data/spotify/: artists.csv  user_info.csv
knn/interface/: knn_engine.cpp  knn_engine.h
knn/matrix/: matrix_utils.cpp  matrix_utils.h
knn/parser/: artists_parser.cpp  artists_parser.h  artists_summary.cpp  artists_summary.h  interactions_parser.cpp  interactions_parser.h  platform_summary.cpp  platform_summary.h  string_utils.cpp  string_utils.h
